<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">影乎</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_rb_me">我的</string>
    <string name="home_rb_hot">热门</string>
    <string name="login">登录</string>
    <string name="registe">注册</string>
    <string name="splash_tips">一个会让你上瘾的APP~</string>
    <string name="email_phone">邮箱/手机</string>
    <string name="psw">密码</string>
    <string name="re_psw">确认密码</string>

</resources>
