<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/home_header"
    android:layout_height="match_parent" >
    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:layout_centerInParent="true"
        />
    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@id/tv_app_name"
        android:textSize="14sp"
        android:text="@string/splash_tips"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dip"
        />
    <LinearLayout
        android:id="@+id/ll_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dip"
        >
        <Button
            android:id="@+id/btn_regist"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registe"
            android:textSize="16sp"
            android:padding="10dip"
            android:textColor="@color/blue"
            android:background="@drawable/btn_regist"
            />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            android:text="@string/login"
            android:textSize="16sp"
            android:padding="10dip"
            android:textColor="@color/white"
            android:background="@drawable/btn_login"
            />
        
        </LinearLayout>
        

</RelativeLayout>
